[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
white_box_lib = { path = "../white_box_lib" }

[dependencies]
aes_lib = { path = "../aes_lib" }
white_box_lib = { path = "../white_box_lib" }


